modules/gdscript/tests/scripts/analyzer/errors/cast_object_to_int.gd
func test():
	var object := RefCounted.new()
	print(object as int)
